--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+gunicorn==20.1.0
 Flask==2.3.3
 Flask-SQLAlchemy==3.0.5
 Flask-Bcrypt==1.0.1
@@ -7,7 +8,5 @@ Werkzeug==2.3.7
 python-dotenv==1.0.0
 cryptography==41.0.4
 requests==2.31.0
-
 pandas==2.1.1
 
-gunicorn
